--- a/TFG/style.css
+++ b/TFG/style.css
@@ -53,7 +53,7 @@ button:hover{
 
 .wrapper {
     width: 100%;
-    height: 100vh;
+    height: 80vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -169,7 +169,9 @@ input:checked + label .description {
 /* 
 Login
 */
-
+.logCont{
+    display: none;
+}
 .login-form {
     width: 300px;
     padding: 20px;
