--- a/TFG/style.css
+++ b/TFG/style.css
@@ -52,7 +52,7 @@ button:hover{
 
 .wrapper {
     width: 100%;
-    height: 100vh;
+    height: 80vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -156,3 +156,44 @@ input:checked + label .description {
     background-image: url('./img/hakis.jpg');
 }
 
+/* 
+Login
+*/
+.logCont{
+    display: none;
+}
+.login-form {
+    width: 300px;
+    padding: 20px;
+    background-color:  rgba(255, 255, 255, 0.7);
+    border-radius: 10px;
+    color: #000000; 
+
+}
+.login-form label,
+.login-form input {
+    display: block;
+    margin-bottom: 10px;
+}
+
+.login-form input[type="submit"] {
+    width: 100%;
+    padding: 10px;
+    border: none;
+    background-color: #007bff;
+    color: white;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.login-form input[type="submit"]:hover {
+    background-color: #0056b3;
+}
+
+.login-form a {
+    display: block;
+    text-align: center;
+    margin-top: 10px;
+    color: #007bff;
+    text-decoration: none;
+}
