--- a/TFG/style.css
+++ b/TFG/style.css
@@ -22,7 +22,7 @@ button {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    height: 90vh;
+    height: 100%;
     width: 100%;
 }
 
@@ -183,6 +183,73 @@ input:checked+label .description {
 }
 
 /* 
+footer
+*/
+
+footer{
+    position: relative;
+    width: 100%;
+    background: #3586ff;
+    min-height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+footer .ola{
+    position: absolute;
+    top: -100px;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    background: url(img/wave.png); 
+    background-size: 1000px 100px;
+
+}
+footer .ola#ola1{
+    z-index: 1000;
+    opacity: 0.75;
+    bottom: 0;
+    animation: animacionOla 4s linear infinite;
+}
+
+footer .ola#ola2{
+    z-index: 999;
+    opacity: 0.5;
+    bottom: 10px;
+    animation: animacionOla2 4s linear infinite;
+}
+footer .ola#ola3{
+    z-index: 1000;
+    opacity: 0.2;
+    bottom: 15px;
+    animation: animacionOla 3s linear infinite;
+}
+
+footer .ola#ola4{
+    z-index: 999;
+    opacity: 0.7;
+    bottom: 20px;
+    animation: animacionOla2 3s linear infinite;
+}
+
+@keyframes animacionOla {
+    0%{
+        background-position-x: 1000px;
+    }
+    100%{
+        background-position-x: 0px;
+    }
+}
+@keyframes animacionOla2 {
+    0%{
+        background-position-x: 1000px;
+    }
+    100%{
+        background-position-x: 0px;
+    }
+}
+
+/* 
 Login
 */
 .logCont {
@@ -238,7 +305,7 @@ Login
 }
 
 /* 
-Personajes
+Contenido y box 
 */
 
 .content-wrapper .container {
@@ -277,6 +344,5 @@ Personajes
         width: calc(50% - 20px); 
     }
 }
-
 
 
