--- a/TFG/vista/style.css
+++ b/TFG/vista/style.css
@@ -1,4 +1,44 @@
-.container {
+body, html {
+    height: 100%;
+    margin: 0;
+}
+
+.bg_img {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url('tu-imagen-aqui.jpg'); /* Reemplaza con tu imagen */
+}
+
+#contenedorChat {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    width: 300px;
+    height: 400px;
+    background-color: white;
+    border: 1px solid #000;
+    z-index: 1000;
+    display: none;
+}
+
+#mensajes {
+    height: 80%;
+    overflow-y: auto;
+}
+
+.chatOculto {
+    display: none;
+}
+
+.chatVisible {
+    display: block;
+}
+
+
+
+/* .container {
     display: flex;
     justify-content: center;
     gap: 10px;
@@ -51,4 +91,4 @@
 .description a {
     display: block;
     text-align: center;
-}
+} */
