--- a/TFG/style.css
+++ b/TFG/style.css
@@ -60,7 +60,7 @@ button:hover {
 
 .wrapper {
     width: 100%;
-    height: 80vh;
+    height: 70%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -83,30 +83,31 @@ button:hover {
     margin: 0 10px;
     display: flex;
     align-items: flex-end;
-    transition: .6s cubic-bezier(.28, -0.03, 0, .99);
-    box-shadow: 0px 10px 30px -5px rgba(0, 0, 0, 0.8);
+    transition: .6s cubic-bezier(.28,-0.03,0,.99);
+    box-shadow: 0px 10px 30px -5px rgba(0,0,0,0.8);
 }
 
-.card>.row {
+.card > .row {
     color: rgb(82, 65, 238);
     display: flex;
     flex-wrap: nowrap;
 }
 
-.card>.row>.description {
+.card > .row > .description {
     display: flex;
     justify-content: center;
     flex-direction: column;
     overflow: hidden;
     height: 80px;
     width: 520px;
+    color: white;
     opacity: 0;
     transform: translateY(30px);
     transition-delay: .3s;
     transition: all .3s ease;
 }
 
-.card>.row>.icon {
+/* .card>.row>.icon {
     background: #223;
     color: white;
     border-radius: 50%;
@@ -116,25 +117,32 @@ button:hover {
     align-items: center;
     margin: 15px;
     visibility: hidden;
-}
+} */
 
 .description {
     color: #b0b0ba;
-    Text-align: center;
     display: flex;
     align-items: center;
-}
+    text-align: center;
+    padding-left: 15%;
 
-.description a {
-    width: 30%;
-    padding-top: 5px;
+}
+.description a{
+    width: 25%;
+    padding-top: 3px;
     background-color: #223;
+    color: white;
+    border-radius: 90%;
+    margin-top: 10px;
+    border-radius: 2rem;
 }
 
 .description h4 {
     text-transform: uppercase;
-    background-color: #223;
+    background-color: rgb(0, 0, 0);
     width: 30%;
+    border-radius: 50%;
+    border-radius: 2rem;
 }
 #input-busqueda{
     display: block;
@@ -182,6 +190,10 @@ input:checked+label .description {
 
 .card[for="c8"] {
     background-image: url('./img/hakis.jpg');
+}
+
+.card[for="c9"] {
+    background-image: url('./img/eventosEspeciales.webp');
 }
 
 /* 
