--- a/TFG/vista/style.css
+++ b/TFG/vista/style.css
@@ -1,6 +1,11 @@
-body, html {
-    height: 100%;
+html, body {
+    height: 100%; 
     margin: 0;
+    padding: 0;
+    /* display: flex; */
+    justify-content: center; 
+    align-items: center; 
+    background: #f7f7f7; 
 }
 
 .bg_img {
@@ -8,9 +13,17 @@ body, html {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url('tu-imagen-aqui.jpg'); /* Reemplaza con tu imagen */
+    flex-direction: column;
+    background-image: url('tu-imagen-aqui.jpg');
 }
+main {
+    flex: 1; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #9e9e9e;
 
+}
 #contenedorChat {
     position: fixed;
     bottom: 0;
@@ -23,7 +36,14 @@ body, html {
     display: none;
 }
 
-#mensajes {
+#content-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+}
+
+
+/* #mensajes {
     height: 80%;
     overflow-y: auto;
 }
@@ -36,6 +56,53 @@ body, html {
     display: block;
 }
 
+.content {
+    position: relative; 
+    z-index: 1;
+} */
+
+#comment-section {
+    max-width: 600px;
+    width: 700px;
+    max-height: 400px;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 15px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-top: 20px;
+    margin-bottom: 20px;
+    overflow: auto;
+}
+
+#comment-form {
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+#comment-text {
+    width: 100%;
+    height: 100px;
+    resize: none;
+    margin-bottom: 10px;
+}
+
+.comentarios div {
+    margin-bottom: 10px;
+    padding: 10px;
+    background-color: #f9f9f9;
+    border-radius: 5px;
+}
+
+
+
+
+/* .comentarios {
+    
+} */
+
+/* footer {
+    
+} */
 
 
 /* .container {
