--- a/TFG/style.css
+++ b/TFG/style.css
@@ -3,41 +3,48 @@
     margin: 0;
     padding: 0;
 }
-body::-webkit-scrollbar{
+
+body::-webkit-scrollbar {
     display: none;
 }
-a, button{
+
+a,
+button {
     font-family: "Monserrat", sans-serif;
     font-weight: 500;
     font-size: 16px;
     color: rgb(0, 0, 0);
     text-decoration: none;
 }
+
 .bg_img {
     background-image: url(img/wallpaperflare.com_wallpaperOscuri.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    height: 90vh;
+    height: 100vh;
     width: 100%;
 }
-header{
+
+header {
     display: flex;
     justify-content: flex-end;
     align-items: center;
     padding: 30px 10%;
-    
+
 }
-.logo{
+
+.logo {
     cursor: pointer;
     margin-right: auto;
     position: absolute;
-    top: 10px; 
-    left: 10px; 
-    z-index: 1;/* Para que el logo esté por encima de la imagen del encabezado */
+    top: 10px;
+    left: 10px;
+    z-index: 1;
+   
 }
 
-button{
+button {
     padding: 9px 25px;
     background-color: rgb(211, 211, 219);
     border: none;
@@ -45,14 +52,15 @@ button{
     cursor: pointer;
     transition: all 0.3s ease 0s;
 }
-button:hover{
+
+button:hover {
     background-color: rgb(29, 150, 140);
 }
 
 
 .wrapper {
     width: 100%;
-    height: 80vh;
+    height: 70%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -92,13 +100,14 @@ button:hover{
     overflow: hidden;
     height: 80px;
     width: 520px;
+    color: white;
     opacity: 0;
     transform: translateY(30px);
     transition-delay: .3s;
     transition: all .3s ease;
 }
 
-.card > .row > .icon {
+/* .card>.row>.icon {
     background: #223;
     color: white;
     border-radius: 50%;
@@ -108,25 +117,45 @@ button:hover{
     align-items: center;
     margin: 15px;
     visibility: hidden;
-}
-.description p {
+} */
+
+.description {
     color: #b0b0ba;
-    padding-top: 5px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    padding-left: 15%;
+
+}
+.description a{
+    width: 25%;
+    padding-top: 3px;
+    background-color: #223;
+    color: white;
+    border-radius: 90%;
+    margin-top: 10px;
+    border-radius: 2rem;
 }
 
 .description h4 {
     text-transform: uppercase;
+    background-color: rgb(0, 0, 0);
+    width: 30%;
+    border-radius: 50%;
+    border-radius: 2rem;
 }
-
+#input-busqueda{
+    display: block;
+}
 input {
     display: none;
 }
 
-input:checked + label {
+input:checked+label {
     width: 600px;
 }
 
-input:checked + label .description {
+input:checked+label .description {
     opacity: 1 !important;
     transform: translateY(0) !important;
 }
@@ -134,56 +163,142 @@ input:checked + label .description {
 .card[for="c1"] {
     background-image: url('./img/personajes.webp');
 }
+
 .card[for="c2"] {
     background-image: url('./img/locaclizaciones.jpg');
 }
+
 .card[for="c3"] {
     background-image: url('./img/banderas.jpg');
 }
+
 .card[for="c4"] {
     background-image: url('./img/barco.jpg');
 }
+
 .card[for="c5"] {
     background-image: url('./img/armas.jpg');
 }
+
 .card[for="c6"] {
     background-image: url('./img/Fruta_del_diablo.webp');
 }
+
 .card[for="c7"] {
     background-image: url('./img/Diales.webp');
 }
+
 .card[for="c8"] {
     background-image: url('./img/hakis.jpg');
+}
+
+.card[for="c9"] {
+    background-image: url('./img/eventosEspeciales.webp');
+}
+
+/* 
+footer
+*/
+
+footer{
+    position: relative;
+    width: 100%;
+    background: #3586ff;
+    min-height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+footer .ola{
+    position: absolute;
+    top: -100px;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    background: url(img/wave.png); 
+    background-size: 1000px 100px;
+
+}
+footer .ola#ola1{
+    z-index: 1000;
+    opacity: 0.75;
+    bottom: 0;
+    animation: animacionOla 4s linear infinite;
+}
+
+footer .ola#ola2{
+    z-index: 999;
+    opacity: 0.5;
+    bottom: 10px;
+    animation: animacionOla2 4s linear infinite;
+}
+footer .ola#ola3{
+    z-index: 1000;
+    opacity: 0.2;
+    bottom: 15px;
+    animation: animacionOla 3s linear infinite;
+}
+
+footer .ola#ola4{
+    z-index: 999;
+    opacity: 0.7;
+    bottom: 20px;
+    animation: animacionOla2 3s linear infinite;
+}
+
+@keyframes animacionOla {
+    0%{
+        background-position-x: 1000px;
+    }
+    100%{
+        background-position-x: 0px;
+    }
+}
+@keyframes animacionOla2 {
+    0%{
+        background-position-x: 1000px;
+    }
+    100%{
+        background-position-x: 0px;
+    }
 }
 
 /* 
 Login
 */
-.logCont{
-    display: none;
-}
-.login-form {
-    width: 300px;
-    padding: 20px;
-    background-color:  rgba(255, 255, 255, 0.7);
-    border-radius: 10px;
-    color: #000000; 
+.logCont {
+    text-align: center;
 
 }
+
+.login-form {
+    width: 300px;
+    padding: 10px;
+    background-color: rgba(255, 255, 255, 0.7);
+    border-radius: 30px;
+    color: #000000;
+
+}
+
 .login-form label,
 .login-form input {
     display: block;
     margin-bottom: 10px;
+    padding-left: 5px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .login-form input[type="submit"] {
     width: 100%;
-    padding: 10px;
+    padding: 20px;
     border: none;
     background-color: #007bff;
     color: white;
     cursor: pointer;
-    border-radius: 5px;
+    border-radius: 30px;
+
 }
 
 .login-form input[type="submit"]:hover {
@@ -197,3 +312,51 @@ Login
     color: #007bff;
     text-decoration: none;
 }
+
+#usuario,
+#clave {
+    border-radius: 20px;
+}
+
+/* 
+Contenido y box 
+*/
+
+.content-wrapper .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+    width: 80%;
+
+}
+
+.box {
+    width: calc(25% - 20px); 
+    max-width: 200px; 
+    height: 100px; 
+    background-color: #f0f0f0;
+    border: 1px solid #ccc;
+    text-align: center;
+    box-sizing: border-box;
+    cursor: pointer;
+    margin: 10px;
+}
+
+@media (max-width: 768px) {
+    .container {
+        width: 90%; 
+    }
+
+    .box {
+        width: calc(33.33% - 20px); 
+    }
+}
+
+@media (max-width: 576px) {
+    .box {
+        width: calc(50% - 20px); 
+    }
+}
+
+
